--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,4 +1,5 @@
 <% @user.each_slice(3) do |users| %>
+<div class="row">
   <% users.each do |user| %>
     <div class="col-md-4 col-sm-4" style="margin-top:25px;">
       <div class="usercard">
@@ -18,6 +19,7 @@
       </div>
     </div>
   <% end %>
+</div>
 <% end %>
 
 <div class="modal fade" id="postmodal" tabindex="-1" role="dialog" aria-hidden="true">
