--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -91,9 +91,10 @@ html *{
 }
 .ui.cards > .card{
   box-shadow:none;
+  width:100%;
 }
 .ui.cards ~ .ui.cards, .ui.cards > .card, .ui.cards{
-  margin-top:10px;
+  margin-top:0.625em;
 }
 
 /* Top */
