--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -23,8 +23,8 @@
 }
 
 .col-sm-3.grid-item, .col-md-3.grid-item, .col-lg-3.grid-item{
-  padding-left:10px;
-  padding-right:10px;
+  padding-left:0.625em;
+  padding-right:0.625em;
 }
 
 /* single post */
