--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -6,29 +6,29 @@
 		<% end %>
 	</p>
 <% end %>
-<%= form_for @post, :html => {:class => "form"} do |f| %>
-	<div class="form-group">
+<%= form_for @post, :html => {:class => "ui form"} do |f| %>
+	<div class="field">
 		<%= f.label :title, '標題: ' %>
-		<%= f.text_field :title , :class =>"form-control" %><br><br>
+		<%= f.text_field :title %><br><br>
 	</div>
-	<div class="form-group">
+	<div class="field">
 		<%= f.label :image, '縮圖(圖片大小限制15mb以下): ' %><br><br>
-		<%= f.file_field :image , :class =>"form-control" %><br><br>
+		<%= f.file_field :image %><br><br>
 	</div>
-	<div class="form-group">
+	<div class="field">
 		<%= f.label :content, '內文: ' %>
-		<%= f.text_area :content , :class =>"form-control" %><br><br>
+		<%= f.text_area :content %><br><br>
 	</div>
-	<div class="form-group">
+	<div class="field">
 		<%= f.label :tag_list, '標籤: ' %>
-		<%= f.text_field :tag_list, :class =>"form-control", placeholder:"#風景#標籤" %><br><br>
+		<%= f.text_field :tag_list, placeholder:"#風景#標籤" %><br><br>
 	</div>
 	<% if params[:pid] %>
 		<input type='hidden' value='<%= params[:pid] %>' name='post[folder_id]' />
 	<% else %>
 		<input type='hidden' value='0' name='folder_id' />
 	<% end %>
-	<div class="form-group">
+	<div class="field">
 		<%= f.submit '創立', :class =>"tiny ui black basic button" %>
 		<%= link_to '返回', :back , :class =>"tiny ui black basic button" %>
 	</div>
