--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -8,31 +8,31 @@
       <% end %>
     </p>
   <% end %>
-  <%= form_for @user, :html => {:class => "form"} do |f| %>
-    <div class="form-group">
+  <%= form_for @user, :html => {:class => "ui form"} do |f| %>
+    <div class="field">
         <%= f.label :avatar, '大頭照' %>
-        <%= f.file_field :avatar,:class =>"form-control" %><br>
+        <%= f.file_field :avatar %><br>
         <%= f.hidden_field(:avatar_cache) %>
     </div>
-      <div class="form-group">
+      <div class="field">
         <%= f.label :name, '用戶名' %>
-        <%= f.text_field :name, :class =>"form-control" %><br>
+        <%= f.text_field :name %><br>
     </div>
-      <div class="form-group">
+      <div class="field">
         <%= f.label :email, 'Email' %>
-        <%= f.text_field :email, :class =>"form-control" %><br>
+        <%= f.text_field :email %><br>
       </div>
-      <div class="form-group">
+      <div class="field">
         <%= f.label :password, '密碼(8碼以上)' %>
-        <%= f.password_field :password, :class =>"form-control", placeholder:"若不更新密碼則留空"  %><br>
+        <%= f.password_field :password, placeholder:"若不更新密碼則留空"  %><br>
       </div>
-      <div class="form-group">
+      <div class="field">
         <%= f.label :password_confirmation, '再次輸入密碼' %>
-        <%= f.password_field :password_confirmation, :class =>"form-control", placeholder:"若不更新密碼則留空" %><br>
+        <%= f.password_field :password_confirmation, placeholder:"若不更新密碼則留空" %><br>
       </div>
-      <div class="form-group">
+      <div class="field">
         <%= f.label :about, '個人簡介' %>
-        <%= f.text_area :about, :class =>"form-control"  %><br>
+        <%= f.text_area :about %><br>
       </div>
       <%= f.submit '更新', :class =>"tiny ui black basic button" %>
   <% end %>
