--- a/app/views/users/login.html.erb
+++ b/app/views/users/login.html.erb
@@ -1,11 +1,15 @@
 <div class="col-md-6 col-md-offset-3">
 	<h1 class="text-center h1">登入</h1>
-		<%= form_tag "create_login_session" do %>
+	<%= form_tag "create_login_session" ,:class => "ui form" do %>
+		<div class="field">
 			<%= label_tag "信箱" %>
-			<%= text_field_tag :email ,params[:email], :class =>"form-control"  %><br>
+			<%= text_field_tag :email ,params[:email], :class =>"form-control" %>
+		</div>
+		<div class="field">
 		  <%= label_tag "密碼" %>
-			<%= password_field_tag :password, params[:password], :class =>"form-control"  %><br>
-			<%= submit_tag "登入", :class =>"tiny ui black basic button"  %>
-		<% end %>
-	</div>
+			<%= password_field_tag :password, params[:password], :class =>"form-control" %>
+		</div>
+		<%= submit_tag "登入", :class =>"tiny ui black basic button"  %>
+	<% end %>
+</div>
 <div class="block"></div>
