--- a/app/views/messages/_form.html.erb
+++ b/app/views/messages/_form.html.erb
@@ -11,13 +11,13 @@
 			<div class="modal-body">
 				<%= form_for Message.new, :html => {:class => "ui form"}, remote: true do |f| %>
 					<div class="field">
-						<%= f.label :title, '標題: ' %><br><br>
+						<%= f.label :title, '標題: ' %>
 						<%= f.text_field :title %>
 					</div>
 					<input type='hidden' value='<%= receiver.id %>' name='message[receiver_id]' />
 					<div class="field">
-						<%= f.label :body, '內文: ' %><br><br>
-						<%= f.text_area :body %><br><br>
+						<%= f.label :body, '內文: ' %>
+						<%= f.text_area :body,:col=>"50", :rows=>"4"%>
 					</div>
 					<div class="field">
 						<%= f.submit '傳送', :class =>"tiny ui black basic button", data: {confirm: "確定送出?" } %>
