--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,4 +1,4 @@
-<div class="col-md-6 col-md-offset-3">
+<div class="col-md-6 col-sm-6 col-md-offset-3 col-sm-offset-3">
   <h1 class="text-center h1">更新個人資料</h1>
   <% if @user.errors.count > 0 %>
     <p class="alert alert-warning formalert">
