--- a/app/views/users/signup.html.erb
+++ b/app/views/users/signup.html.erb
@@ -1,4 +1,4 @@
-<div class="col-md-6 col-md-offset-3">
+<div class="col-md-6 col-sm-6 col-md-offset-3 col-sm-offset-3">
   <h1 class="text-center h1">註冊</h1>
   <% if @user.errors.count > 0 %>
   <p class="alert alert-warning formalert">
@@ -31,7 +31,7 @@
   </div>
   <div class="field">
     <%= f.label :about, '個人簡介' %>
-    <%= f.text_area :about ,:col=>"50", :rows=>"4"%>
+    <%= f.text_area :about ,:col=>"50", :rows=>"4" %>
   </div>
   <%= f.submit '註冊', :class =>"tiny ui black basic button" %>
   <% end %>
