--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -99,8 +99,11 @@ a,a:hover{
 /* Top */
 .topmenu{
   width:100%;
-  margin-top:10px;
-  margin-bottom:50px;
+  position:fixed;
+  padding-top:10px;
+  top:0px;
+  right:20px;
+  background:white;
 }
 
 .topmenu li{
@@ -160,6 +163,7 @@ a,a:hover{
 }
 
 #menu-desktop{
+  z-index:1000;
   position:fixed;
   width:16.667%;
 }
