--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -101,9 +101,11 @@ a,a:hover{
   width:100%;
   position:fixed;
   padding-top:10px;
+  padding-right:20px;
   top:0px;
-  right:20px;
+  right:0px;
   background:white;
+  z-index:999;
 }
 
 .topmenu li{
