--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -43,7 +43,7 @@ $(document).ready(function(){
       $('.topmenu').css('background','rgba(255,255,255,0.8)');
 		} else {
 			$('.scrollToTop').fadeOut();
-      $('.topmenu').css('opacity','rgba(255,255,255,1)');
+      $('.topmenu').css('background','rgba(255,255,255,1)');
 		}
 	});
 
