--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -23,7 +23,7 @@
                 </div>
               </div>
             </div>
-            <%= image_tag post.image.url , :class =>'postimg' %>
+            <%= image_tag post.image.url(:post) , :class =>'postimg' %>
           </div>
         </div>
       </div>
