--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,27 +1,6 @@
 <div class="grid">
   <div class="grid-sizer"></div>
-  <% @post.each_slice(4) do |posts| %>
-      <% posts.each do |post| %>
-        <div class="col-lg-3 col-md-3 col-sm-3 grid-item  ui special cards" id="post-<%= post.id %>" data-id="<%= post.id %>">
-          <div class="card">
-            <div class="blurring dimmable image">
-              <div class="ui dimmer post-show" data-toggle="modal" data-target="#postmodal" data-id="<%= post.id %>">
-                <div class="content" style="font-size:0.9em;">
-                  <div class="center">
-                    <i class="calendar icon"></i> <%= post.created_at.strftime("%Y/%m/%d") %><br><br>
-                    <i class="heart red icon"></i><%= post.likes.count %>&nbsp;&nbsp;&nbsp;
-                    <i class="unhide icon"></i><%= post.view %>&nbsp;&nbsp;&nbsp;
-                    <i class="comment icon"></i><%= post.comments.count %>
-                  </div>
-                </div>
-              </div>
-              <%= image_tag post.image.url , :class =>'postimg' %>
-            </div>
-            <span class="authorname"><%=link_to post.user.name , post.user %></span>
-          </div>
-        </div>
-      <% end %>
-  <% end %>
+  <%= render partial: 'post', collection: @post %>
 </div>
 
 <div class="modal fade" id="postmodal" tabindex="-1" role="dialog" aria-hidden="true">
@@ -32,6 +11,7 @@
 </div>
 
 <script type="text/javascript">
+
   var grid = $('.grid').imagesLoaded( function() {
     grid.masonry({
       itemSelector: '.grid-item',
