--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -8,7 +8,7 @@
 </div>
 <div class="grid">
   <div class="grid-sizer"></div>
-  <%= render partial: 'post', collection: @post %>
+  <%= render partial: 'posts/post', collection: @post %>
 </div>
 
 <div class="modal fade" id="postmodal" tabindex="-1" role="dialog" aria-hidden="true">
