--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -56,6 +56,17 @@
   margin:10px auto 0 auto;
 }
 
+.userorderbtn{
+  text-align:right;
+  display:block;
+  width:100%;
+  padding:20px;
+}
+
+.userorderbtn a{
+  padding:5px 5px;
+  margin:0px 10px;
+}
 /* 裁圖 */
 
 #previewbox{
