--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -67,6 +67,33 @@
   padding:5px 5px;
   margin:0px 10px;
 }
+
+.user-category{
+  font-family:"微軟正黑體","Microsoft JhengHei","儷黑 Pro","LiHei Pro","標楷體","Arial","Helvetica Neue";
+  display:inline-block;
+  width:16%;
+  margin:10px 0px;
+  padding:5px 10px;
+  text-align:center;
+}
+
+.user-category-img{
+  width:100px;
+  height:100px;
+  margin:10px auto;
+  display: block;
+}
+
+.edituser-category{
+  margin:20px 0px;
+  text-align:center;
+}
+
+.edituser-category-img{
+  width:80%;
+  margin:0 auto 10px auto;
+  display: block;
+}
 /* 裁圖 */
 
 #previewbox{
@@ -79,4 +106,10 @@
 
 .jcrop-holder{
 	margin:0px auto;
+}
+
+@media screen and (max-width:768px){
+  .user-category{
+    width:100%;
+  }
 }
