--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -10,7 +10,7 @@
           <div class="usercard-posts">
             <% user.mypost.each do |post| %>
               <div class="usercard-post" data-toggle="modal" data-target="#postmodal" data-id="<%= post.id %>">
-                <%= image_tag post.image.url(:post) , :class => 'usercard-postimg' %>
+                <%= image_tag post.image.url(:square) , :class => 'usercard-postimg' %>
               </div>
             <% end %>
           </div>
