--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -85,13 +85,14 @@
 }
 
 .edituser-category{
+  font-family:"微軟正黑體","Microsoft JhengHei","儷黑 Pro","LiHei Pro","標楷體","Arial","Helvetica Neue";
   margin:20px 0px;
   text-align:center;
 }
 
 .edituser-category-img{
-  width:80%;
-  margin:0 auto 10px auto;
+  width:40%;
+  margin:10px auto;
   display: block;
 }
 /* 裁圖 */
