add user category

--- a/app/views/layouts/_desktopmenu.html.erb
+++ b/app/views/layouts/_desktopmenu.html.erb
@@ -11,6 +11,7 @@
       <li class="slink"><%= link_to '油畫水彩',users_path(:c =>'D') %></li>
       <li class="slink"><%= link_to '服裝',users_path(:c =>'E') %></li>
       <li class="slink"><%= link_to '介面UI',users_path(:c =>'F') %></li>
+      <li class="slink"><%= link_to '動畫電繪',users_path(:c =>'G') %></li>
     <% end %>
     <% if current_user  %>
       <li class="biglink"><%= link_to current_user.name , current_user%></li>
