--- a/app/views/layouts/_desktopmenu.html.erb
+++ b/app/views/layouts/_desktopmenu.html.erb
@@ -4,19 +4,20 @@
     <hr>
     <li class="biglink"><%= link_to '找設計師',users_path %></li>
     <hr>
-    <% if @category %>
-      <li class="slink"><%= link_to '工藝',users_path(:c =>'A') %></li>
-      <li class="slink"><%= link_to '攝影',users_path(:c =>'B') %></li>
-      <li class="slink"><%= link_to '插畫',users_path(:c =>'C') %></li>
-      <li class="slink"><%= link_to '油畫水彩',users_path(:c =>'D') %></li>
-      <li class="slink"><%= link_to '服裝',users_path(:c =>'E') %></li>
-      <li class="slink"><%= link_to '介面UI',users_path(:c =>'F') %></li>
-      <li class="slink"><%= link_to '動畫電繪',users_path(:c =>'G') %></li>
+    <% if @category==1 %>
+      <li class="slink category"><%= link_to '工藝',users_path(:c =>'A') %></li>
+      <li class="slink category"><%= link_to '攝影',users_path(:c =>'B') %></li>
+      <li class="slink category"><%= link_to '插畫',users_path(:c =>'C') %></li>
+      <li class="slink category"><%= link_to '油畫水彩',users_path(:c =>'D') %></li>
+      <li class="slink category"><%= link_to '服裝',users_path(:c =>'E') %></li>
+      <li class="slink category"><%= link_to '介面UI',users_path(:c =>'F') %></li>
+      <li class="slink category"><%= link_to '動畫電繪',users_path(:c =>'G') %></li>
+      <hr>
     <% end %>
     <% if current_user  %>
       <li class="biglink"><%= link_to current_user.name , current_user%></li>
-      <% if current_user.role > 0  %>
-        <hr>
+      <hr>
+      <% if current_user.role > 0 && @category!=1 && @controlpanel!=1 %>
         <li class="slink"><%= link_to '發文',new_post_path %></li>
         <li class="slink"><%= link_to '我的貼文', current_user %></li>
         <li class="slink"><%= link_to '資料夾',myfolder_path(current_user) %></li>
@@ -25,17 +26,19 @@
           <li class="slink"><%= link_to '管理用戶',adminuser_path %></li>
           <li class="slink"><%= link_to '管理文章',adminpost_path %></li>
         <% end %>
-      <% else %>
+      <% elsif @category!=1 && @controlpanel!=1 %>
         <li class="slink"><%= link_to '追蹤的設計師',following_path(current_user)  %></li>
       <% end %>
     <% else %>
       <li class="slink"><%= link_to '註冊', signup_path %></li>
     <% end %>
-    <% if @show %>
-      <li class="biglink"><%= link_to @user.name , @user %></li>
-      <hr>
-      <li class="slink"><%= link_to '資料夾' , myfolder_path(@user.id) %></li>
-      <li class="slink"><%= link_to '追蹤的設計師' , following_path(@user.id) %></li>
+    <% if @show==1 %>
+      <% if (current_user && current_user.id != @user.id) || (!current_user) %>
+        <li class="biglink"><%= link_to @user.name , @user %></li>
+        <hr>
+        <li class="slink"><%= link_to '資料夾' , myfolder_path(@user.id) %></li>
+        <li class="slink"><%= link_to '追蹤的設計師' , following_path(@user.id) %></li>
+      <% end %>
     <% end %>
     <li class="slink" style="font-size:24px;">
       <a href="#"><i class="facebook icon"></i></a>
