--- a/app/views/layouts/_desktopmenu.html.erb
+++ b/app/views/layouts/_desktopmenu.html.erb
@@ -40,7 +40,7 @@
         <li class="slink"><%= link_to '追蹤的設計師' , following_path(@user.id) %></li>
       <% end %>
     <% end %>
-    <li class="slink" style="font-size:24px;">
+    <li class="slink" style="font-size:24px;opacity:0.5;">
       <a href="#"><i class="facebook icon"></i></a>
       <a href="#"><i class="instagram icon"></i></a>
     </li>
