--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -59,7 +59,7 @@
         <% end %>
     <% end %>
     <div class="post-content">
-      <%= @post.content %>
+      <%= raw @post.content %>
     </div>
     <p><%= image_tag 'post/hashtag.png',:id => "post-hashtagicon" %><%= @post.tag_list %></p>
     <div id="comments">
