--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -56,6 +56,10 @@
   margin:10px auto 0 auto;
 }
 
+.usercard-about p{
+  overflow-wrap: break-word;
+}
+
 .userorderbtn{
   text-align:right;
   display:block;
