--- a/app/views/posts/destroy.js.erb
+++ b/app/views/posts/destroy.js.erb
@@ -1,3 +1,4 @@
 $('#postrow-<%= @post.id %>').fadeOut();
 $('#post-<%= @post.id %>').fadeOut();
 $('#postmodal .close').click();
+toastr.success("刪除成功");
