--- a/app/views/layouts/_topmenu.html.erb
+++ b/app/views/layouts/_topmenu.html.erb
@@ -29,6 +29,12 @@
           <div id="notificationFooter"><%= link_to '全部通知',notice_path %></div>
         </div>
       </li>
+      <li id="draw">
+        <a href="#" data-toggle="modal" data-target="#drawmodal">
+          <%=image_tag 'menu/draw.png',:id => "drawicon" %>
+          <%=image_tag 'menu/drawhover.png',:id => "drawiconhover" %>
+        </a>
+      </li>
   <% else %>
     <li><%= link_to image_tag('menu/login.png'),login_path %></li>
   <% end %>
@@ -41,6 +47,8 @@
   </div>
 </div>
 
+<%= render 'draws/draw' %>
+
 <script>
   $('#mailbox')
   .mouseover(function(){
@@ -50,6 +58,16 @@
   .mouseout(function() {
     $('#mailboxicon').show();
     $('#mailboxiconhover').hide();
+  });
+
+  $('#draw')
+  .mouseover(function(){
+    $('#drawicon').hide();
+    $('#drawiconhover').show();
+  })
+  .mouseout(function() {
+    $('#drawicon').show();
+    $('#drawiconhover').hide();
   });
 
 
@@ -87,6 +105,39 @@
         type: 'POST',
         success: function(response) {
           $('#notificationcount').remove();
+        }
+      });
+    });
+
+    /* clear draw model when user close */
+    $('#drawmodal').on('hidden.bs.modal', function () {
+      $('#drawmodal #stepone').css('display','none');
+      $('#drawmodal #steptwo').css('display','block');
+      $('#drawmodal #stepthree').css('display','none').empty();
+      $('#drawmodal #stepfour').css('display','none').empty();
+    });
+
+    $('#drawmodal #join').on('click',function(){
+      $('#drawmodal #stepone').css('display','none');
+      $('#drawmodal #steptwo').css('display','block');
+    });
+
+    $('#drawmodal #submit').on('click',function(){
+      var check=["A","B","C","D","E","F","G"];
+      var params="";
+      for(var i in check){
+        if($("#steptwo input[name='"+check[i]+"']").prop("checked")){
+          params+=check[i];
+          $("#steptwo input[name='"+check[i]+"']").click();
+        }
+      }
+      var ajaxurl = '/draw?c='+params;
+      $.ajax({
+        url:ajaxurl,
+        type: 'POST',
+        success: function(response) {
+          $('#drawmodal #steptwo').css('display','none');
+          $('#drawmodal #stepthree').css('display','block').append(response);
         }
       });
     });
