--- a/app/views/draws/_draw.html.erb
+++ b/app/views/draws/_draw.html.erb
@@ -1,3 +1,17 @@
+<% if check_today_draw > 0 %>
+<div class="modal fade" id="drawmodal" tabindex="-1" role="dialog" aria-hidden="true">
+  <div class="modal-dialog modal-lg" role="document">
+    <div class="modal-content">
+      <div class="modal-body text-center" style="padding:20px 50px;">
+        <p style="line-height:28px;">嗨，這個功能一天只能用一次喔，明天再來吧!</p><br><br>
+        <div class="text-center">
+          <div class="ui small black basic button" data-dismiss="modal">退出</div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+<% else %>
 <div class="modal fade" id="drawmodal" tabindex="-1" role="dialog" aria-hidden="true">
   <div class="modal-dialog modal-lg" role="document">
     <div class="modal-content">
@@ -53,10 +67,46 @@
           </div>
         </div>
       </div>
-      <div class="modal-body" id="stepthree" style="display:none;height:600px;">
-      </div>
-      <div class="modal-body" id="stepfour" style="display:none;height:300px;">
-      </div>
+      <div class="modal-body" id="stepthree" style="display:none;height:600px;"></div>
+      <div class="modal-body" id="stepfour" style="display:none;height:300px;"></div>
     </div>
   </div>
 </div>
+<script>
+  $(document).ready(function () {
+
+    /* clear draw model when user close */
+    $('#drawmodal').on('hidden.bs.modal', function () {
+      $('#drawmodal #stepone').css('display', 'none');
+      $('#drawmodal #steptwo').css('display', 'block');
+      $('#drawmodal #stepthree').css('display', 'none').empty();
+      $('#drawmodal #stepfour').css('display', 'none').empty();
+    });
+
+    $('#drawmodal #join').on('click', function () {
+      $('#drawmodal #stepone').css('display', 'none');
+      $('#drawmodal #steptwo').css('display', 'block');
+    });
+
+    $('#drawmodal #submit').on('click', function () {
+      var check = ["A","B","C","D","E","F","G"];
+      var params = "";
+      for (var i in check) {
+        if ($("#steptwo input[name='" + check[i] + "']").prop("checked")) {
+          params += check[i];
+          $("#steptwo input[name='" + check[i] + "']").click();
+        }
+      }
+      var ajaxurl = '/draw?c=' + params;
+      $.ajax({
+        url: ajaxurl,
+        type: 'POST',
+        success: function (response) {
+          $('#drawmodal #steptwo').css('display', 'none');
+          $('#drawmodal #stepthree').css('display', 'block').append(response);
+        }
+      });
+    });
+  });
+</script>
+<% end %>
