--- a/app/views/layouts/_topmenu.html.erb
+++ b/app/views/layouts/_topmenu.html.erb
@@ -46,9 +46,9 @@
     </div>
   </div>
 </div>
-
-<%= render 'draws/draw' %>
-
+<% if current_user %>
+  <%= render 'draws/draw' %>
+<% end %>
 <script>
   $('#mailbox')
   .mouseover(function(){
@@ -105,39 +105,6 @@
         type: 'POST',
         success: function(response) {
           $('#notificationcount').remove();
-        }
-      });
-    });
-
-    /* clear draw model when user close */
-    $('#drawmodal').on('hidden.bs.modal', function () {
-      $('#drawmodal #stepone').css('display','none');
-      $('#drawmodal #steptwo').css('display','block');
-      $('#drawmodal #stepthree').css('display','none').empty();
-      $('#drawmodal #stepfour').css('display','none').empty();
-    });
-
-    $('#drawmodal #join').on('click',function(){
-      $('#drawmodal #stepone').css('display','none');
-      $('#drawmodal #steptwo').css('display','block');
-    });
-
-    $('#drawmodal #submit').on('click',function(){
-      var check=["A","B","C","D","E","F","G"];
-      var params="";
-      for(var i in check){
-        if($("#steptwo input[name='"+check[i]+"']").prop("checked")){
-          params+=check[i];
-          $("#steptwo input[name='"+check[i]+"']").click();
-        }
-      }
-      var ajaxurl = '/draw?c='+params;
-      $.ajax({
-        url:ajaxurl,
-        type: 'POST',
-        success: function(response) {
-          $('#drawmodal #steptwo').css('display','none');
-          $('#drawmodal #stepthree').css('display','block').append(response);
         }
       });
     });
