--- a/app/views/layouts/_topmenu.html.erb
+++ b/app/views/layouts/_topmenu.html.erb
@@ -47,7 +47,7 @@
   </div>
 </div>
 <% if current_user %>
-  <%= render 'draws/draw' %>
+  <%= render 'drawmsgs/draw' %>
 <% end %>
 <script>
   $('#mailbox')
